# openMarkovROS

./: CMakeLists.txt  README.md  package.xml
examples/: ActivityRecognition_Experiment1NACO.pgmx
msg/: OMvariable.msg  StateWithProb.msg
scripts/: openMarkovROS_node.py
srv/: GetVarProbs.srv  SetFinding.srv
